deploy/win-web.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sample-sandbox
  name: windows-web
  labels:
    app: windows-web
spec:
  ports:
    # the port that this service should serve on
    - port: 8000
      targetPort: 80
  selector:
    app: windows-web
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample-sandbox
  labels:
    app: windows-web
  name: windows-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: windows-web
  template:
    metadata:
      namespace: sample-sandbox
      labels:
        app: windows-web
      name: windows-web
    spec:
      containers:
        - name: windows-web
          image: ghodrat/aspnet-web-sample:win-2019
      nodeSelector:
        kubernetes.io/os: windows
