deploy/win-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: windows-web
  labels:
    app: windows-web
  namespace: sample-sandbox
spec:
  ingressClassName: nginx
  rules:
    - host: www.windows-web.com
      http:
        paths:
          - backend:
              service:
                name: windows-web
                port:
                  number: 80
            path: /
            pathType: Exact
